tests/analyzer/errors/enums.rv
enum Foo {
    a,
    a,
}

enum Bar { a, b }
enum Baz { c, d }

fn main() {
    var bar = Bar.a
    bar = Bar.not_a_field
    bar.a

    bar = Baz.c

    var baz = Baz.c

    baz == Baz
    baz == Bar.a

    Baz.c == Bar.a

    1 + Baz.c
}

